--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,9 @@ apply plugin: 'com.android.application'
 //apply plugin: 'com.mob.sdk'
 
 android {
-    compileSdkVersion 31
+    //compileSdkVersion 33
+    namespace 'com.truescend.gofit'
+    compileSdk 33
 
 
     dexOptions {
@@ -16,7 +18,7 @@ android {
     defaultConfig {
         applicationId rootProject.ext.android.applicationId
         minSdkVersion 19
-        targetSdkVersion 31
+        targetSdkVersion 33
         versionCode rootProject.ext.android.versionCode
         versionName rootProject.ext.android.versionName
         buildConfigField "String", "APP_UPDATE_APPNAME", "\""+rootProject.ext.android.updateAppName+"\""
