--- a/app/src/main/manifest/default/AndroidManifest.xml
+++ b/app/src/main/manifest/default/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.truescend.gofit">
+   >
 
+    <!-- package="com.truescend.gofit"-->
     <!--拍照-->
     <queries>
     <package android:name="${applicationId}" />
