--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,5 @@ org.gradle.caching=true
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig = true
 
